--- a/Exercises/Exerciseset1/ExerciseSet1.Rmd
+++ b/Exercises/Exerciseset1/ExerciseSet1.Rmd
@@ -1,8 +1,10 @@
 
 ---
 title: "Exercise Set 1"
-author: "T. Evgeniou"
-output: html_document
+author: "Sarah Wong"
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 
@@ -59,7 +61,7 @@ For more information on downloading finance data from the internet as well as on
 
 1. Can you find some interesting finance related R package or github repository? 
 **Your Answers here:**
-<br>
+<br> https://github.com/7kfpun/awesome-fintech
 <br>
 
 <hr>
@@ -87,10 +89,13 @@ pnl_plot(SPY)
 3. *(Extra points)* What if we want to also see the returns of another company, say Yahoo!, in the same period? Can you get that data and report the statistics for Yahoo!'s stock, too? 
 
 **Your Answers here:**
+<br> Answer 1: This is at the beginning: `mytickers = c("SPY", "AAPL")`, which tells R to download data relating to both S&P 500 and Apple together. I used DataSet1.R
+<br>Answer 2: 
+1. Apple's cumulative returns are `r round(100*sum(StockReturns[,"AAPL"]),1)`%.
+2. Apple's average daily returns of the Apple index during this period is `r round(100*mean(StockReturns[,"AAPL"]),3)`%
+3. Apple's standard deviation is `r round(100*sd(StockReturns[,"AAPL"]),2)`%;
 <br>
-<br>
-<br>
-<br>
+<br>Answer 3: change myTickers = c("YHOO") and run anaysis as before.
 
 <hr>
 <hr>
@@ -119,7 +124,6 @@ names(portfolio) <- rownames(StockReturns)
 pnl_plot(portfolio)
 ```
 
-
 We can also transpose the matrix of returns to create a new "horizontal" matrix. Let's call this matrix (variable name) transposedData. We can do so using this command:  `transposedData = t(StockReturns)`. 
 
 #### Questions
@@ -128,8 +132,13 @@ We can also transpose the matrix of returns to create a new "horizontal" matrix.
 2. Based on the help for the R function *apply* (`help(apply)`), can you create again the portfolio of S&P and Apple and plot the returns in a new figure below?
 
 **Your Answers here:**
-<br>
-<br>
+<br>Answer 1: 
+nrow(transposedData)
+ncol(transposedData)
+<br>Answer 2:
+{r echo=FALSE, comment=NA, warning=FALSE, message=FALSE,results='asis',fig.align='center', fig=TRUE}
+portfolio = apply(transposedData,2,mean)
+pnl_plot(portfolio)
 <br>
 <br>
 
@@ -146,7 +155,7 @@ This is an important step and will get you to think about the overall process on
 2. *(Extra Exercise)*  Can you get the returns of a few companies and plot the returns of an equal weighted portfolio with those companies during some period you select? 
 
 **Your Answers here:**
-<br>
+<br>Answer 1: change startDate to "2001-01-01"
 <br>
 <br>
 <br>
@@ -172,7 +181,7 @@ Try it!
 
 #### Questions
 
-1. Once you write and read the data as described above, what happens when you run this command in the console of the RStudio: `sum(myData != StockReturns[1:20,])`
+1. Once you write and read the data as described above, what happens when you run this command in the console of the RStudio: `sum(myData != StockReturns[1:20,])` 
 2. *(Extra exercise)* What do you think will happen if you now run this command, and why:  
 
 ```{r eval = FALSE, echo=TRUE}
@@ -180,9 +189,10 @@ myData + StockReturns[1:40,]
 ```
 
 **Your Answers here:**
+<br>Answer 1: 20
 <br>
-<br>
-<br>
+<br> Extra Exercise Answer: I received the following error message: 'Error in FUN(left, right) : non-numeric argument to binary operator.' This is because the tables values are not aligned.
+
 <br>
 
 <hr>
